# distributedhardware_device_manager

./: 1.patch  AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  bundle.json  device_manager.gni  devicemanager.gni  devicemangaer.diff  hisysevent.yaml  knowledge.md  ohos.build
3rd/interfaces/: BUILD.gn
3rd/services/implementation/: BUILD.gn
3rd/services/service/: BUILD.gn
3rd/utils/: BUILD.gn
3rd/utils/include/: app_manager_3rd.h  device_manager_data_struct_3rd.h  dm_anonymous_3rd.h  dm_auth_info_3rd.h  dm_constants_3rd.h  dm_crypto_3rd.h  dm_error_type_3rd.h  dm_log_3rd.h  dm_single_instance_3rd.h  dm_timer_3rd.h  ipc_interface_code_3rd.h  multiple_user_connector_3rd.h  permission_manager_3rd.h
3rd/utils/src/: app_manager_3rd.cpp  dm_anonymous_3rd.cpp  dm_auth_info_3rd.cpp  dm_constants_3rd.cpp  dm_crypto_3rd.cpp  dm_timer_3rd.cpp  multiple_user_connector_3rd.cpp  permission_manager_3rd.cpp
commondependency/: BUILD.gn
commondependency/include/: deviceprofile_connector.h  dm_constraints_manager.h  dp_inited_callback.h  multiple_user_connector.h
commondependency/src/: deviceprofile_connector.cpp  dm_constraints_manager.cpp  dp_inited_callback.cpp  multiple_user_connector.cpp
dbimpl/kvdbimpl/bykvstore/: BUILD.gn
dpconnector/: BUILD.gn
ext/pin_auth/: AGENTS.md  BUILD.gn
ext/pin_auth/include/: pin_auth.h  pin_auth_ui.h
ext/pin_auth/src/: pin_auth.cpp  pin_auth_ui.cpp
interfaces/cj/kits/: BUILD.gn
interfaces/inner_kits/native_cpp/: BUILD.gn
interfaces/kits/ndk/: BUILD.gn
interfaces/kits/taihe/: BUILD.gn
interfaces/mini_tools_kits/native_cpp/: BUILD.gn
json/: BUILD.gn
json/include/: dm_cJSON.h  json_object.h
json/src/: dm_cJSON.cpp  json_object.cpp  json_object_cjson.cpp  json_object_nlohmannjson.cpp
radar/: BUILD.gn
radar/include/: dm_radar_helper.h
radar/src/: dm_radar_helper.cpp
radar/src/lite/: dm_radar_helper.cpp
services/devicemanagerservice/: BUILD.gn
services/devicemanagerservice/include/: device_manager_service.h  device_manager_service_listener.h
services/devicemanagerservice/src/: device_manager_service.cpp  device_manager_service_listener.cpp
services/implementation/: AGENTS.md  BUILD.gn
services/implementation/include/: device_manager_service_impl.h  device_manager_service_impl_lite.h
services/implementation/src/: device_manager_service_impl.cpp  device_manager_service_impl_lite.cpp
services/service/: BUILD.gn
services/service/include/: device_manager_service.h  device_manager_service_listener.h  i_dm_service_impl_ext.h  i_softbus_discovering_callback.h  i_softbus_lnn_ops_callback.h  idevice_manager_service_impl.h  idevice_manager_service_listener.h
services/service/src/: device_manager_service.cpp  device_manager_service_listener.cpp  device_manager_service_listener_refactored.cpp  device_manager_service_two.cpp
services/softbuscache/: BUILD.gn
services/softbuscache/include/: dm_softbus_cache.h
services/softbuscache/src/: dm_softbus_cache.cpp
test/benchmarktest/device_manager_fa_test/: BUILD.gn  device_manager_fa_test.cpp
test/benchmarktest/device_manager_test/: BUILD.gn  device_manager_test.cpp
test/commonfuzztest/: BUILD.gn
test/commonfuzztest/authacl_fuzzer/: BUILD.gn  auth_acl_fuzzer.cpp
test/commonfuzztest/authcredential_fuzzer/: BUILD.gn  auth_credential_fuzzer.cpp  auth_credential_fuzzer.h
test/commonfuzztest/authenticatedevice_fuzzer/: BUILD.gn  authenticate_device_fuzzer.cpp
test/commonfuzztest/authenticatedeviceservice_fuzzer/: BUILD.gn  authenticate_device_service_fuzzer.cpp
test/commonfuzztest/authenticatedeviceserviceimpl_fuzzer/: BUILD.gn  authenticate_device_service_impl_fuzzer.cpp  authenticate_device_service_impl_fuzzer.h
test/commonfuzztest/authpinauth_fuzzer/: BUILD.gn  auth_pin_auth_fuzzer.cpp  auth_pin_auth_fuzzer.h
test/commonfuzztest/dmanonyous_fuzzer/: BUILD.gn  dm_anonyous_fuzzer.cpp  dm_anonyous_fuzzer.h
test/commonfuzztest/dmauthmanager_fuzzer/: BUILD.gn  dm_auth_manager_fuzzer.cpp
test/commonfuzztest/dmauthmanagerv2_fuzzer/: BUILD.gn  dm_auth_manager_fuzzer.cpp  dm_auth_manager_fuzzer.h
test/commonfuzztest/dmcommoneventmanager_fuzzer/: BUILD.gn  dm_common_event_manager_fuzzer.cpp
test/commonfuzztest/dmcredentialimpl_fuzzer/: BUILD.gn  dm_credential_impl_fuzzer.cpp
test/commonfuzztest/dmdiscoverymanager_fuzzer/: BUILD.gn
test/commonfuzztest/dmfreezeprocess_fuzzer/: BUILD.gn  dm_freeze_process_fuzzer.cpp  dm_freeze_process_fuzzer.h
test/commonfuzztest/dmnegotiateprocess_fuzzer/: BUILD.gn  (+2 more)
test/servicesfuzztest/: BUILD.gn
test/smallunittest/: BUILD.gn  device_manager_linux_test.cpp  device_manager_linux_test.h
test/softbusfuzztest/: BUILD.gn
test/unittest/: BUILD.gn  UTTest_advertise_manager.cpp  UTTest_advertise_manager.h  UTTest_app_manager.cpp  UTTest_app_manager.h  UTTest_app_manager_two.cpp  UTTest_app_manager_two.h  UTTest_auth_acl.cpp  UTTest_auth_acl.h  UTTest_auth_confirm.cpp  UTTest_auth_confirm.h  UTTest_auth_cred_negotiate_cred.cpp  UTTest_auth_cred_negotiate_cred.h  UTTest_auth_credential_state.cpp  UTTest_auth_credential_state.h  UTTest_auth_manager.cpp  UTTest_auth_manager.h  UTTest_auth_manager_cred.cpp  UTTest_auth_manager_cred.h  UTTest_auth_message_processor.cpp  UTTest_auth_message_processor.h  UTTest_auth_negotiate.cpp  UTTest_auth_negotiate.h  UTTest_auth_negotiate_state.cpp  UTTest_auth_negotiate_state.h  UTTest_auth_pin_auth_state.cpp  UTTest_auth_pin_auth_state.h  UTTest_auth_pincode_manager.cpp  UTTest_auth_pincode_manager.h  UTTest_auth_pincode_message_processor.cpp  UTTest_auth_pincode_message_processor.h  UTTest_auth_pincode_state.cpp  UTTest_auth_pincode_state.h  UTTest_auth_request_state.cpp  UTTest_auth_request_state.h  UTTest_auth_response_state.cpp  UTTest_auth_response_state.h  UTTest_crypto_mgr.cpp  UTTest_crypto_mgr.h  UTTest_device_manager_impl.cpp  (+181 more)
utils/: BUILD.gn
utils/include/: dm_anonymous.h  dm_error_message.h  dm_hash.h  dm_hisysevent.h  dm_log.h  dm_random.h
utils/src/: dm_anonymous.cpp  dm_error_message.cpp  dm_hash.cpp  dm_hisysevent.cpp  dm_log.cpp  dm_random.cpp
(+1647 files in other folders)
