# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributedhardware/device_manager/device_manager.gni")
ohos_shared_library("devicemanagerradar") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "${innerkits_path}/native_cpp/include",
    "${c_utils_path}/include",
    "//third_party/cJSON",
  ]

  sources = [
    "${common_path}/src/dm_softbus_adapter_crypto.cpp",
    "src/dm_radar_helper.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"devicemanagerradar\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${mbedtls_path}:mbedtls_shared",
    "${utils_path}:devicemanagerutils",
    "//third_party/cJSON:cjson",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
  ]

  subsystem_name = "distributedhardware"

  part_name = "device_manager"
}
